@@ -3,8 +3,6 @@ package util.data;
 import das.Commandable;
 import das.IssuePool;
 import io.Writable;
-import io.collector.CollectorFuture;
-import io.collector.MathCollector;
 import io.telnet.TelnetCodes;
 import org.apache.commons.lang3.math.NumberUtils;
 import org.tinylog.Logger;
@@ -13,13 +11,12 @@ import util.gis.Waypoints;
 import util.math.MathUtils;
 import util.tools.TimeTools;
 import util.tools.Tools;
+import util.xml.XMLdigger;
 import util.xml.XMLfab;
 import util.xml.XMLtools;
 import worker.Datagram;
 
 import java.nio.file.Path;
-import java.time.LocalDateTime;
-import java.time.ZoneOffset;
 import java.util.*;
 import java.util.Map.Entry;
 import java.util.concurrent.*;
@@ -31,14 +28,14 @@ import java.util.stream.Collectors;
  * A storage class
  *
  */
-public class RealtimeValues implements CollectorFuture, DataProviding, Commandable {
+public class RealtimeValues implements DataProviding, Commandable {
 
 	/* Data stores */
-	private final ConcurrentHashMap<String, DoubleVal> doubleVals = new ConcurrentHashMap<>(); // doubles
-	private final ConcurrentHashMap<String, IntegerVal> integerVals = new ConcurrentHashMap<>(); // doubles
+	private final ConcurrentHashMap<String, RealVal> realVals = new ConcurrentHashMap<>(); // doubles
+	private final ConcurrentHashMap<String, IntegerVal> integerVals = new ConcurrentHashMap<>(); // integers
 	private final ConcurrentHashMap<String, String> texts = new ConcurrentHashMap<>(); // strings
 	private final ConcurrentHashMap<String, FlagVal> flagVals = new ConcurrentHashMap<>(); // booleans
-	private final HashMap<String, MathCollector> mathCollectors = new HashMap<>(); // Math collectors
+
 	private Waypoints waypoints; // waypoints
 	private final IssuePool issuePool;
 
@@ -49,11 +46,10 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 	private final Path settingsPath;
 
 	/* Patterns */
-	private final Pattern words = Pattern.compile("[a-zA-Z]+[_:0-9]*[a-zA-Z0-9]+\\d*"); // find references to doublevals etc
+	private final Pattern words = Pattern.compile("[a-zA-Z]+[_:\\d]*[a-zA-Z\\d]+\\d*"); // find references to *val
 
 	/* Other */
 	private final BlockingQueue<Datagram> dQueue; // Used to issue triggered cmd's
-	private ArrayList<String> errorLog = new ArrayList<>();
 
 	boolean readingXML=false;
 
@@ -72,30 +68,20 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 	 */
 	public void readFromXML( XMLfab fab ){
 
-		double defDouble = XMLtools.getDoubleAttribute(fab.getCurrentElement(),"realdefault",Double.NaN);
+		double defReal = XMLtools.getDoubleAttribute(fab.getCurrentElement(),"realdefault",Double.NaN);
 		String defText = XMLtools.getStringAttribute(fab.getCurrentElement(),"textdefault","");
 		boolean defFlag = XMLtools.getBooleanAttribute(fab.getCurrentElement(),"flagdefault",false);
 		int defInteger = XMLtools.getIntAttribute(fab.getCurrentElement(),"integerdefault",-999);
 
 		readingXML=true;
-		fab.getChildren("*").forEach( // The tag * is special and acts as wildcard
+		fab.getChildren("group").forEach( // The tag * is special and acts as wildcard
 				rtval -> {
-					String id = XMLtools.getStringAttribute(rtval,"id",""); // get the id of the node
-					if( id.isEmpty()) // Can't do anything without an id
-						return;
-					if( rtval.getTagName().equals("group")){ // If the node is a group node
-						id += "_"; // The id we got is the group id, so add an underscore for the full id with name
-						for( var groupie : XMLtools.getChildElements(rtval)){ // Get the nodes inside the group node
-							// Both id and name are valid attributes for the node name that forms the full id
-							// First check if id is used
-							var gid = XMLtools.getStringAttribute(groupie,"id",""); // get the node id
-							// then check if it has an attribute name and use this instead if found
-							gid = id + XMLtools.getStringAttribute(groupie,"name",gid); //
-							processRtvalElement(groupie, gid, defDouble, defText, defFlag,defInteger);
-						}
-					}else { // If it isn't a group node
-						// then the id is the full id
-						processRtvalElement(rtval, id, defDouble, defText, defFlag,defInteger);
+					// Both id and name are valid attributes for the node name that forms the full id
+					var groupName = XMLtools.getStringAttribute(rtval,"id",""); // get the node id
+					groupName = XMLtools.getStringAttribute(rtval,"name",groupName);
+					for( var groupie : XMLtools.getChildElements(rtval)){ // Get the nodes inside the group node
+						// First check if id is used
+						processRtvalElement(groupie, groupName, defReal, defText, defFlag,defInteger);
 					}
 				}
 		);
@@ -105,130 +91,125 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 	/**
 	 * Process a Val node
 	 * @param rtval The node to process
-	 * @param id The id of the Val
-	 * @param defDouble The default double value
+	 * @param group The group of the Val
+	 * @param defReal The default real value
 	 * @param defText The default text value
 	 * @param defFlag The default boolean value
 	 */
-	private void processRtvalElement(Element rtval, String id, double defDouble, String defText, boolean defFlag, int defInteger ){
-		switch( rtval.getTagName() ){
-			case "double": case "real":
-				// Both attributes fractiondigits and scale are valid, so check for both
-				int scale = XMLtools.getIntAttribute(rtval,"fractiondigits",-1);
-				if( scale == -1)
-					scale = XMLtools.getIntAttribute(rtval,"scale",-1);
+	private void processRtvalElement(Element rtval, String group, double defReal, String defText, boolean defFlag, int defInteger ){
+		String name = XMLtools.getStringAttribute(rtval,"name","");
+		name = XMLtools.getStringAttribute(rtval,"id",name);
+		if( name.isEmpty())
+			name = rtval.getTextContent();
+		String id = group.isEmpty()?name:group+"_"+name;
 
-				if( !hasDouble(id)) // If it doesn't exist yet
-					setDouble(id,defDouble,true); // create it
-				var dv = getDoubleVal(id).get();//
-				dv.reset(); // reset needed if this is called because of reload
-				dv.name(XMLtools.getChildValueByTag(rtval,"name",dv.name()))
-						.group(XMLtools.getChildValueByTag(rtval,"group",dv.group()))
-						.unit(XMLtools.getStringAttribute(rtval,"unit",""))
-						.fractionDigits(scale)
-						.defValue(XMLtools.getDoubleAttribute(rtval,"default",defDouble));
-
-					String options = XMLtools.getStringAttribute(rtval,"options","");
-					for( var opt : options.split(",")){
-						var arg = opt.split(":");
-						switch( arg[0]){
-							case "minmax":  dv.keepMinMax(); break;
-							case "time":    dv.keepTime();   break;
-							case "scale":	dv.fractionDigits( NumberUtils.toInt(arg[1],-1)); break;
-							case "order":   dv.order( NumberUtils.toInt(arg[1],-1)); break;
-							case "history": dv.enableHistory( NumberUtils.toInt(arg[1],-1)); break;
-						}
+		switch (rtval.getTagName()) {
+			case "double", "real" -> {
+				RealVal rv;
+				if (getRealVal(id).isEmpty()) // If it doesn't exist yet
+					addRealVal(RealVal.newVal(group, name), false); // create it
+				rv = getRealVal(id).get();
+				rv.reset(); // reset needed if this is called because of reload
+				rv.unit(XMLtools.getStringAttribute(rtval, "unit", ""))
+						.scale(XMLtools.getIntAttribute(rtval, "scale", -1))
+						.defValue(XMLtools.getDoubleAttribute(rtval, "default", defReal));
+				String options = XMLtools.getStringAttribute(rtval, "options", "");
+				for (var opt : options.split(",")) {
+					var arg = opt.split(":");
+					switch (arg[0]) {
+						case "minmax" -> rv.keepMinMax();
+						case "time" -> rv.keepTime();
+						case "scale" -> rv.scale(NumberUtils.toInt(arg[1], -1));
+						case "order" -> rv.order(NumberUtils.toInt(arg[1], -1));
+						case "history" -> rv.enableHistory(NumberUtils.toInt(arg[1], -1));
 					}
-				if( !XMLtools.getChildElements(rtval,"cmd").isEmpty() )
-					dv.enableTriggeredCmds(dQueue);
-				for( Element trigCmd : XMLtools.getChildElements(rtval,"cmd")){
+				}
+				if (!XMLtools.getChildElements(rtval, "cmd").isEmpty())
+					rv.enableTriggeredCmds(dQueue);
+				for (Element trigCmd : XMLtools.getChildElements(rtval, "cmd")) {
 					String trig = trigCmd.getAttribute("when");
 					String cmd = trigCmd.getTextContent();
-					dv.addTriggeredCmd(trig,cmd);
+					rv.addTriggeredCmd(trig, cmd);
 				}
-				break;
-			case "integer":case "int":
-				if( !hasInteger(id)) // If it doesn't exist yet
-					setInteger(id,defInteger,true); // create it
+			}
+			case "integer", "int" -> {
+				if (!hasInteger(id)) // If it doesn't exist yet
+					addIntegerVal(IntegerVal.newVal(group, name), false); // create it
 				var iv = getIntegerVal(id).get();//
 				iv.reset(); // reset needed if this is called because of reload
-				iv.name(XMLtools.getChildValueByTag(rtval,"name",iv.name()))
-						.group(XMLtools.getChildValueByTag(rtval,"group",iv.group()))
-						.unit(XMLtools.getStringAttribute(rtval,"unit",""))
-						.defValue(XMLtools.getIntAttribute(rtval,"default",defInteger));
-
-				String opts = XMLtools.getStringAttribute(rtval,"options","");
-				for( var opt : opts.split(",")){
+				iv.unit(XMLtools.getStringAttribute(rtval, "unit", ""))
+						.defValue(XMLtools.getIntAttribute(rtval, "default", defInteger));
+				String opts = XMLtools.getStringAttribute(rtval, "options", "");
+				for (var opt : opts.split(",")) {
 					var arg = opt.split(":");
-					switch( arg[0]){
-						case "minmax":  iv.keepMinMax(); break;
-						case "time":    iv.keepTime();   break;
-						case "order":   iv.order( NumberUtils.toInt(arg[1],-1)); break;
-						case "history": iv.enableHistory( NumberUtils.toInt(arg[1],-1)); break;
+					switch (arg[0]) {
+						case "minmax" -> iv.keepMinMax();
+						case "time" -> iv.keepTime();
+						case "order" -> iv.order(NumberUtils.toInt(arg[1], -1));
+						case "history" -> iv.enableHistory(NumberUtils.toInt(arg[1], -1));
 					}
 				}
-				if( !XMLtools.getChildElements(rtval,"cmd").isEmpty() )
+				if (!XMLtools.getChildElements(rtval, "cmd").isEmpty())
 					iv.enableTriggeredCmds(dQueue);
-				for( Element trigCmd : XMLtools.getChildElements(rtval,"cmd")){
+				for (Element trigCmd : XMLtools.getChildElements(rtval, "cmd")) {
 					String trig = trigCmd.getAttribute("when");
 					String cmd = trigCmd.getTextContent();
-					iv.addTriggeredCmd(trig,cmd);
+					iv.addTriggeredCmd(trig, cmd);
 				}
-				break;
-			case "text":
-				setText(id,XMLtools.getStringAttribute(rtval,"default",defText));
-				break;
-			case "flag":
+			}
+			case "text" -> setText(id, XMLtools.getStringAttribute(rtval, "default", defText));
+			case "flag" -> {
 				var fv = getOrAddFlagVal(id);
 				fv.reset(); // reset is needed if this is called because of reload
-				fv.name(XMLtools.getChildValueByTag(rtval,"name",fv.name()))
-						.group(XMLtools.getChildValueByTag(rtval,"group",fv.group()))
-						.defState(XMLtools.getBooleanAttribute(rtval,"default",defFlag));
-				if( XMLtools.getBooleanAttribute(rtval,"keeptime",false) )
+				fv.name(XMLtools.getChildValueByTag(rtval, "name", fv.name()))
+						.group(XMLtools.getChildValueByTag(rtval, "group", fv.group()))
+						.defState(XMLtools.getBooleanAttribute(rtval, "default", defFlag));
+				if (XMLtools.getBooleanAttribute(rtval, "keeptime", false))
 					fv.keepTime();
-				if( !XMLtools.getChildElements(rtval,"cmd").isEmpty() )
+				if (!XMLtools.getChildElements(rtval, "cmd").isEmpty())
 					fv.enableTriggeredCmds(dQueue);
-				for( Element trigCmd : XMLtools.getChildElements(rtval,"cmd")){
+				for (Element trigCmd : XMLtools.getChildElements(rtval, "cmd")) {
 					String trig = trigCmd.getAttribute("when");
 					String cmd = trigCmd.getTextContent();
-					fv.addTriggeredCmd(trig,cmd);
+					fv.addTriggeredCmd(trig, cmd);
 				}
-				break;
+			}
 		}
 	}
 	/* ************************************* P A R S I N G ********************************************************* */
 	/**
 	 * Simple version of the parse realtime line, just checks all the words to see if any matches the hashmaps.
-	 * It assumes all words are double, but also allows for d:id,t:id and f:id or D: or F: if it should create them
+	 * It assumes all words are reals, but also allows for d:id,t:id and f:id
 	 * @param line The line to parse
 	 * @param error The line to return on an error or 'ignore' if errors should be ignored
 	 * @return The (possibly) altered line
 	 */
 	public String simpleParseRT( String line,String error ){
 
-		var found = words.matcher(line).results().map(MatchResult::group).collect(Collectors.toList());
+		var found = words.matcher(line).results().map(MatchResult::group).toList();
 
 		for( var word : found ){
 			if( word.contains(":")){ // Check if the word contains a : with means it's {d:id} etc
 				var id = word.split(":")[1];
+				String repl="";
 				switch( word.charAt(0) ) {
 					case 'd': case 'r':
-						if( !hasDouble(id)) {
-							Logger.error("No such double "+id+", extracted from "+line);
-							if( !error.equalsIgnoreCase("ignore"))
+						if( hasReal(id) ) { // ID found
+							repl = ""+getReal(id,Double.NaN);
+						}else{
+							Logger.error("No such real "+id+", extracted from "+line); // notify
+							if( !error.equalsIgnoreCase("ignore")) // if errors should be ignored
 								return error;
 						}
-					case 'D': case 'R':
-						line = line.replace(word,""+getOrAddDoubleVal(id).value());
 						break;
 					case 'i':
-						if( !hasInteger(id)) {
-							Logger.error("No such integer "+id+", extracted from "+line);
-							if( !error.equalsIgnoreCase("ignore"))
+						if( hasInteger(id) ) { // ID found
+							repl = "" + getInteger(id,Integer.MAX_VALUE);
+						}else{
+							Logger.error("No such integer "+id+", extracted from "+line); // notify
+							if( !error.equalsIgnoreCase("ignore")) // if errors should be ignored
 								return error;
 						}
-					case 'I':
-						line = line.replace(word,""+getOrAddIntegerVal(id).value());
 						break;
 					case 'f':
 						if( !hasFlag(id)) {
@@ -236,10 +217,7 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 							if( !error.equalsIgnoreCase("ignore"))
 								return error;
 						}
-					case 'F':
-						if( !hasFlag(id))
-							setFlagState(id,false);
-						line = line.replace(word, isFlagUp(id) ? "1" : "0");
+						repl = isFlagUp(id) ? "1" : "0";
 						break;
 					case 't': case 'T':
 						var te = texts.get(id);
@@ -256,25 +234,19 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 						}
 						break;
 				}
+				if( !repl.isEmpty() )
+					line = line.replace(word,repl);
 			}else { // If it doesn't contain : it could be anything...
-				var d = getDouble(word, Double.NaN); // First check if it's a double
-				if (!Double.isNaN(d)) {
-					line = line.replace(word, "" + d);
+				if (hasReal(word)) { //first check for real
+					line = line.replace(word, "" + getReal(word,Double.NaN));
  				} else { // if not
-					var i = getInteger(word,Integer.MAX_VALUE);
-					if( i != Integer.MAX_VALUE){
-						line = line.replace(word, "" + i);
+					if( hasInteger(word)){
+						line = line.replace(word, "" + getInteger(word,-999));
 					}else {
-						var t = getText(word, ""); // check if it's a text
-						if (!t.isEmpty()) {
-							line = line.replace(word, t);
+						if (hasText(word)) { //next, try text
+							line = line.replace(word, getText(word,""));
 						} else if (hasFlag(word)) { // if it isn't a text, check if it's a flag
 							line = line.replace(word, isFlagUp(word) ? "1" : "0");
-						} else if (error.equalsIgnoreCase("create")) { // if still not found and error is set to create
-							// add it as a double
-							getOrAddDoubleVal(word).updateValue(0);
-							Logger.warn("Created doubleval " + word + " with value 0");
-							line = line.replace(word, "0"); // default of a double is 0
 						} else if (!error.equalsIgnoreCase("ignore")) { // if it's not ignore
 							Logger.error("Couldn't process " + word + " found in " + line); // log it and abort
 							return error;
@@ -289,7 +261,7 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 	/**
 	 * Stricter version to parse a realtime line, must contain the references within { }
 	 * Options are:
-	 * - DoubleVal: {d:id} and {double:id} if it should already exist, or {D:id} if it should be created if new (value is 0.0)
+	 * - RealVal: {d:id} and {real:id} if it should already exist, or {D:id} if it should be created if new (value is 0.0)
 	 * - FlagVal: {f:id} or {b:id} and {flag:id} if it should already exist, or {F:id} if it should be created if new (state will be false)
 	 * This also checks for {utc}/{utclong},{utcshort} to insert current timestamp
 	 * @param line The original line to parse/alter
@@ -305,33 +277,26 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 		for( var p : pairs ){
 			if(p.length==2) {
 				switch (p[0]) {
-					case "d": case "D": case "r": case "R":
-					case "double": case "real": {
-						var d = p[0].equals("D")||p[0].equals("R")?getOrAddDoubleVal(p[1]).value():getDouble(p[1], Double.NaN);
+					case "d", "r", "double", "real" -> {
+						var d = getReal(p[1], Double.NaN);
 						if (!Double.isNaN(d) || !error.isEmpty())
 							line = line.replace("{" + p[0] + ":" + p[1] + "}", Double.isNaN(d) ? error : "" + d);
-						break;
 					}
-					case "i": case "I":
-					case "int": case "integer": {
-						var i = p[0].equals("I")?getOrAddIntegerVal(p[1]).intValue():getInteger(p[1], Integer.MAX_VALUE);
+					case "i", "int", "integer" -> {
+						var i = getInteger(p[1], Integer.MAX_VALUE);
 						if (i != Integer.MAX_VALUE)
-							line = line.replace("{" + p[0] + ":" + p[1] + "}",  "" + i);
-						break;
+							line = line.replace("{" + p[0] + ":" + p[1] + "}", "" + i);
 					}
-					case "t":
-					case "text":
+					case "t", "text" -> {
 						String t = getText(p[1], error);
 						if (!t.isEmpty())
 							line = line.replace("{" + p[0] + ":" + p[1] + "}", t);
-						break;
-					case "f": case "F": case "b":
-					case "flag": {
-						var d = p[0].equalsIgnoreCase("F")?Optional.of(getOrAddFlagVal(p[1])):getFlagVal(p[1]);
+					}
+					case "f", "b", "flag" -> {
+						var d = getFlagVal(p[1]);
 						var r = d.map(FlagVal::toString).orElse(error);
 						if (!r.isEmpty())
 							line = line.replace("{" + p[0] + ":" + p[1] + "}", r);
-						break;
 					}
 				}
 			}else{
@@ -353,7 +318,7 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 	 * the reference with i followed by the index in nums+offset. {D:id} and {F:id} will add the rtvals if they don't
 	 * exist yet.
 	 *
-	 * fe. {d:temp}+30, nums still empty and offset 1: will add the DoubleVal temp to nums and alter exp to i1 + 30
+	 * fe. {d:temp}+30, nums still empty and offset 1: will add the RealVal temp to nums and alter exp to i1 + 30
 	 * @param exp The expression to check
 	 * @param nums The Arraylist to hold the numerical values
 	 * @param offset The index offset to apply
@@ -363,14 +328,14 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 		if( nums==null)
 			nums = new ArrayList<>();
 
-		// Find all the double/flag pairs
+		// Find all the real/flag pairs
 		var pairs = Tools.parseKeyValue(exp,true); // Add those of the format {d:id}
 		//pairs.addAll( Tools.parseKeyValueNoBrackets(exp) ); // Add those of the format d:id
 
 		for( var p : pairs ) {
 			boolean ok=false;
 			if (p.length == 2) {
-				for( int pos=0;pos<nums.size();pos++ ){ // go through the known doubleVals
+				for( int pos=0;pos<nums.size();pos++ ){ // go through the known realVals
 					var d = nums.get(pos);
 					if( d.id().equalsIgnoreCase(p[1])) { // If a match is found
 						exp = exp.replace("{" + p[0] + ":" + p[1] + "}", "i" + (offset + pos));
@@ -382,83 +347,78 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 				if( ok )
 					continue;
 				int index;
-				switch(p[0]){
-					case "d": case "double": case "D": case "r": case "R": case "real":
-						var d = p[0].equalsIgnoreCase("D")||p[0].equalsIgnoreCase("R")?Optional.of(getOrAddDoubleVal(p[1])):getDoubleVal(p[1]);
-						if( d.isPresent() ){
+				switch (p[0]) {
+					case "d", "double", "r", "real" -> {
+						var d = getRealVal(p[1]);
+						if (d.isPresent()) {
 							index = nums.indexOf(d.get());
-							if(index==-1){
-								nums.add( d.get() );
-								index = nums.size()-1;
+							if (index == -1) {
+								nums.add(d.get());
+								index = nums.size() - 1;
 							}
 							index += offset;
 							exp = exp.replace("{" + p[0] + ":" + p[1] + "}", "i" + index);
-						}else{
-							Logger.error("Couldn't find a doubleval/real with id "+p[1]);
-							errorLog.add("Couldn't find a doubleval/real with id "+p[1]);
+						} else {
+							Logger.error("Couldn't find a real with id " + p[1]);
 							return "";
 						}
-						break;
-					case "int": case "i": case "I": case "INT":
-						var ii = p[0].startsWith("I:")?Optional.of(getOrAddIntegerVal(p[1])):getIntegerVal(p[1]);
-						if( ii.isPresent() ){
+					}
+					case "int", "i" -> {
+						var ii = getIntegerVal(p[1]);
+						if (ii.isPresent()) {
 							index = nums.indexOf(ii.get());
-							if(index==-1){
-								nums.add( ii.get() );
-								index = nums.size()-1;
+							if (index == -1) {
+								nums.add(ii.get());
+								index = nums.size() - 1;
 							}
 							index += offset;
 							exp = exp.replace("{" + p[0] + ":" + p[1] + "}", "i" + index);
-						}else{
-							Logger.error("Couldn't find a integer with id "+p[1]);
-							errorLog.add("Couldn't find a integer with id "+p[1]);
+						} else {
+							Logger.error("Couldn't find a integer with id " + p[1]);
 							return "";
 						}
-						break;
-					case "f": case "flag": case "b": case "F":
-						var f = p[0].equalsIgnoreCase("F")?Optional.of(getOrAddFlagVal(p[1])):getFlagVal(p[1]);
-						if( f.isPresent() ){
+					}
+					case "f", "flag", "b" -> {
+						var f = getFlagVal(p[1]);
+						if (f.isPresent()) {
 							index = nums.indexOf(f.get());
-							if(index==-1){
-								nums.add( f.get() );
-								index = nums.size()-1;
+							if (index == -1) {
+								nums.add(f.get());
+								index = nums.size() - 1;
 							}
 							index += offset;
 							exp = exp.replace("{" + p[0] + ":" + p[1] + "}", "i" + index);
-						}else{
-							Logger.error("Couldn't find a FlagVal with id "+p[1]);
-							errorLog.add("Couldn't find a FlagVal  with id "+p[1]);
+						} else {
+							Logger.error("Couldn't find a FlagVal with id " + p[1]);
 							return "";
 						}
-						break;
-					case "is": // issues
+					}
+					case "is" -> { // issues
 						var i = issuePool.getIssue(p[1]);
-						if( i.isPresent() ){
+						if (i.isPresent()) {
 							index = nums.indexOf(i.get());
-							if(index==-1){
-								nums.add( i.get() );
-								index = nums.size()-1;
+							if (index == -1) {
+								nums.add(i.get());
+								index = nums.size() - 1;
 							}
 							index += offset;
 							exp = exp.replace("{" + p[0] + ":" + p[1] + "}", "i" + index);
-						}else{
-							Logger.error("Couldn't find an Issue with id "+p[1]);
-							errorLog.add("Couldn't find a Issue with id "+p[1]);
+						} else {
+							Logger.error("Couldn't find an Issue with id " + p[1]);
 							return "";
 						}
-						break;
-					default:
-						Logger.error("Operation containing unknown pair: "+p[0]+":"+p[1]);
-						errorLog.add("Operation containing unknown pair: "+p[0]+":"+p[1]);
+					}
+					default -> {
+						Logger.error("Operation containing unknown pair: " + p[0] + ":" + p[1]);
 						return "";
+					}
 				}
 			}else{
 				Logger.error( "Pair containing odd amount of elements: "+String.join(":",p));
-				errorLog.add("Pair containing odd amount of elements: "+String.join(":",p));
 			}
 		}
 		// Figure out the rest?
-		var found = words.matcher(exp).results().map(MatchResult::group).collect(Collectors.toList());
+		var found = words.matcher(exp).results().map(MatchResult::group).toList();
 		for( String fl : found){
 			if( fl.matches("^i\\d+") )
 				continue;
@@ -475,11 +435,10 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 					exp = exp.replace(fl, "i" + index);
 				}else{
 					Logger.error("Couldn't find a FlagVal with id "+fl);
-					errorLog.add("Couldn't find a FlagVal  with id "+fl);
 					return "";
 				}
 			}else{
-				var d = getDoubleVal(fl);
+				var d = getRealVal(fl);
 				if( d.isPresent() ){
 					index = nums.indexOf(d.get());
 					if(index==-1){
@@ -499,8 +458,7 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 						index += offset;
 						exp = exp.replace(fl, "i" + index);
 					}else{
-						Logger.error("Couldn't find a doubleval with id "+fl);
-						errorLog.add("Couldn't find a DoubleVal  with id "+fl);
+						Logger.error("Couldn't find a realval with id "+fl);
 						return "";
 					}
 					return exp;
@@ -510,13 +468,8 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 		nums.trimToSize();
 		return exp;
 	}
-	public String getErrrorLog(){
-		var j = String.join("\r\n",errorLog);
-		errorLog.clear();;
-		return j;
-	}
 	/**
-	 * Look for a numerical val (i.e. DoubleVal, IntegerVal or FlagVal) with the given id
+	 * Look for a numerical val (i.e. RealVal, IntegerVal or FlagVal) with the given id
 	 * @param id The id to look for
 	 * @return An optional Numericalval that's empty if nothing was found
 	 */
@@ -524,90 +477,59 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 		if( id.startsWith("{")){ // First check if the id is contained inside a { }
 			id = id.substring(1,id.length()-2);
 			var pair = id.split(":");
-			switch(pair[0].toLowerCase()) {
-				case "i": case "int": case "integer":
-					return Optional.ofNullable(integerVals.get(id));
-				case "d":case "double": case "r": case "real":
-					return Optional.ofNullable(doubleVals.get(id));
-				case "f": case "flag": case "b":
-					return Optional.ofNullable(flagVals.get(id));
-			}
-			return Optional.empty();
-		} // If it isn't inside { } just check if a match is found in the DoubleVals and then the FlagVals
-		return getDoubleVal(id).map( d -> Optional.of((NumericVal)d)).orElse(Optional.ofNullable((flagVals.get(id))));
+			return switch (pair[0].toLowerCase()) {
+				case "i", "int", "integer" -> Optional.ofNullable(integerVals.get(id));
+				case "d", "double", "r", "real" -> Optional.ofNullable(realVals.get(id));
+				case "f", "flag", "b" -> Optional.ofNullable(flagVals.get(id));
+				default -> Optional.empty();
+			};
+		} // If it isn't inside { } just check if a match is found in the realVals and then the FlagVals
+		return getRealVal(id).map(d -> Optional.of((NumericVal)d)).orElse(Optional.ofNullable((flagVals.get(id))));
 	}
-	/* ************************************ D O U B L E V A L ***************************************************** */
+	/* ************************************ R E A L V A L ***************************************************** */
+
+	@Override
+	public boolean addRealVal(RealVal rv, boolean storeInXML) {
+		if( realVals.containsKey(rv.getID()))
+			return false;
+		if(storeInXML)
+			rv.storeInXml(XMLfab.withRoot(settingsPath,"dcafs","settings","rtvals"));
+		return realVals.put(rv.getID(),rv)==null;
+	}
 
 	/**
-	 * Retrieve a DoubleVal from the hashmap based on the id
+	 * Retrieve a RealVal from the hashmap based on the id
 	 * @param id The reference with which the object was stored
-	 * @return The requested DoubleVal or null if not found
+	 * @return The requested RealVal or null if not found
 	 */
-	public Optional<DoubleVal> getDoubleVal( String id ){
-		if( doubleVals.get(id)==null)
-			Logger.error( "Tried to retrieve non existing doubleval "+id);
-		return Optional.ofNullable(doubleVals.get(id));
+	public Optional<RealVal> getRealVal(String id ){
+		if( realVals.get(id)==null)
+			Logger.error( "Tried to retrieve non existing realval "+id);
+		return Optional.ofNullable(realVals.get(id));
 	}
 
 	/**
-	 * Retrieves the id or adds it if it doesn't exist yet
-	 * @param id The group_name or just name of the val
-	 * @return The object if found or made or null if something went wrong
+	 * Rename a real
+	 * @param from The old name
+	 * @param to The new name
+	 * @param alterXml Whether to also alter the xml
+	 * @return True if ok
 	 */
-	public DoubleVal getOrAddDoubleVal( String id ){
-		if( id.isEmpty())
-			return null;
-
-		var val = doubleVals.get(id);
-		if( val==null){
-			val = DoubleVal.newVal(id);
-			doubleVals.put(id,val);
-			if( !readingXML ){
-				var fab = XMLfab.withRoot(settingsPath, "dcafs","settings","rtvals");
-
-				if( fab.hasChild("real","id",id).isEmpty()){
-					if( val.group().isEmpty()) {
-						if( fab.hasChild("real","id",id).isEmpty()) {
-							Logger.info("doubleval new, adding to xml :"+id);
-							fab.addChild("real").attr("id", id).attr("unit", val.unit()).build();
-						}
-					}else{
-						if( fab.hasChild("group","id",val.group()).isEmpty() ){
-							fab.addChild("group").attr("id",val.group()).down();
-							if( fab.hasChild("real","id",val.name()).isEmpty() )
-								fab.addChild("real").attr("name", val.name()).attr("unit", val.unit()).build();
-						}else{
-							String name = val.name();
-							String unit = val.unit();
-							fab.selectChildAsParent("group","id",val.group())
-									.ifPresent( f->{
-										if( f.hasChild("real","name",name).isEmpty()) {
-											Logger.info("doubleval new, adding to xml :"+id);
-											fab.addChild("real").attr("name", name).attr("unit", unit).build();
-										}
-									});
-						}
-					}
-				}
-			}
-		}
-		return val;
-	}
-	public boolean renameDouble( String from, String to, boolean alterXml){
-		if( hasDouble(to) ){
+	public boolean renameReal(String from, String to, boolean alterXml){
+		if( hasReal(to) ){
 			return false;
 		}
-		var dv = getDoubleVal(from);
-		if( dv.isPresent() ){
-			// Alter the DoubleVal
-			doubleVals.remove(from); // Remove it from the list
+		var rv = getRealVal(from);
+		if( rv.isPresent() ){
+			// Alter the RealVal
+			realVals.remove(from); // Remove it from the list
 			var name = to;
 			if( name.contains("_") )
 				name = name.substring(name.indexOf("_")+1);
 			String newName = name;
-			String oriName = dv.get().name();
-			dv.get().name(name);
-			doubleVals.put(to,dv.get()); // Add it renamed
+			String oriName = rv.get().name();
+			rv.get().name(name);
+			realVals.put(to,rv.get()); // Add it renamed
 
 			// Correct the XML
 			if( alterXml ) {
@@ -627,76 +549,51 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 		}
 		return true;
 	}
-	public boolean hasDouble( String id){
-		return doubleVals.containsKey(id);
+	public boolean hasReal(String id){
+		return realVals.containsKey(id);
 	}
 	/**
-	 * Sets the value of a parameter (in a hashmap)
+	 * Sets the value of a real (in a hashmap)
 	 * @param id The parameter name
 	 * @param value The value of the parameter
-	 * @param createIfNew Whether to create a new object if none was found
 	 * @return True if it was created
 	 */
-	private boolean setDouble(String id, double value, boolean createIfNew) {
+	public boolean updateReal(String id, double value) {
 
 		if( id.isEmpty()) {
 			Logger.error("Empty id given");
 			return false;
 		}
-		DoubleVal d;
-		if( createIfNew ) {
-			d = getOrAddDoubleVal(id);
-		}else{
-			d = doubleVals.get(id);
-		}
-
-		if( d==null ) {
-			Logger.error("No such double "+id+" yet, create it first");
+		RealVal r = realVals.get(id);
+		if( r==null ) {
+			Logger.error("No such real "+id+" yet, create it first");
 			return false;
 		}
-		d.updateValue(value);
+		r.updateValue(value);
 		return true;
 	}
-	public boolean setDouble(String id, double value){
-		return setDouble(id,value,true);
-	}
-	public boolean updateDouble(String id, double value) {
-		if( id.isEmpty())
-			return false;
-		return !setDouble(id,value,false);
-	}
-
 	/**
-	 * Alter all the values of the doubles in the given group
+	 * Alter all the values of the reals in the given group
 	 * @param group The group to alter
 	 * @param value The value to set
-	 * @return The amount of doubles updated
+	 * @return The amount of reals updated
 	 */
-	public int updateDoubleGroup(String group, double value){
-		var set = doubleVals.values().stream().filter( dv -> dv.group().equalsIgnoreCase(group)).collect(Collectors.toSet());
-		set.forEach(dv->dv.updateValue(value));
+	public int updateRealGroup(String group, double value){
+		var set = realVals.values().stream().filter(rv -> rv.group().equalsIgnoreCase(group)).collect(Collectors.toSet());
+		set.forEach(rv->rv.updateValue(value));
 		return set.size();
 	}
 	/**
-	 * Get the value of a double
+	 * Get the value of a real
 	 *
 	 * @param id The id to get the value of
-	 * @param bad The value to return of the id wasn't found
+	 * @param defVal The value to return of the id wasn't found
 	 * @return The value found or the bad value
 	 */
-	public double getDouble(String id, double bad) {
-		return getDouble(id,bad,false);
-	}
-	public double getDouble(String id, double defVal, boolean createIfNew) {
+	public double getReal(String id, double defVal) {
 
-		DoubleVal d = doubleVals.get(id.toLowerCase());
+		RealVal d = realVals.get(id);
 		if (d == null) {
-			if( createIfNew ){
-				Logger.warn("ID "+id+" doesn't exist, creating it with value "+defVal);
-				setDouble(id,defVal,true);
-			}else{
-				Logger.debug("No such id: " + id);
-			}
 			return defVal;
 		}
 		if (Double.isNaN(d.value())) {
@@ -720,47 +617,25 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 
 	/**
 	 * Retrieves the id or adds it if it doesn't exist yet
-	 * @param id The group_name or just name of the val
+	 * @param iv The IntegerVal to add
+	 * @param xmlStore Whether it needs to be stored in xml
 	 * @return The object if found or made or null if something went wrong
 	 */
-	public IntegerVal getOrAddIntegerVal( String id ){
-		if( id.isEmpty())
+	public IntegerVal addIntegerVal( IntegerVal iv, boolean xmlStore ){
+		if( iv==null)
 			return null;
 
-		var val = integerVals.get(id);
-		if( val==null){
-			val = IntegerVal.newVal(id);
-			integerVals.put(id,val);
-			if( !readingXML ){
-				var fab = XMLfab.withRoot(settingsPath, "dcafs","settings","rtvals");
-
-				if( fab.hasChild("int","id",id).isEmpty()){
-					if( val.group().isEmpty()) {
-						if( fab.hasChild("int","id",id).isEmpty()) {
-							Logger.info("New integer, adding to xml :"+id);
-							fab.addChild("int").attr("id", id).attr("unit", val.unit()).build();
-						}
-					}else{
-						if( fab.hasChild("group","id",val.group()).isEmpty() ){
-							fab.addChild("group").attr("id",val.group()).down();
-							if( fab.hasChild("int","id",val.name()).isEmpty() )
-								fab.addChild("int").attr("name", val.name()).attr("unit", val.unit()).build();
-						}else{
-							String name = val.name();
-							String unit = val.unit();
-							fab.selectChildAsParent("group","id",val.group())
-									.ifPresent( f->{
-										if( f.hasChild("int","name",name).isEmpty()) {
-											Logger.info("New integer, adding to xml :"+id);
-											fab.addChild("int").attr("name", name).attr("unit", unit).build();
-										}
-									});
-						}
-					}
-				}
-			}
+		var val = integerVals.get(iv.getID());
+		if( !integerVals.containsKey(iv.getID())){
+			integerVals.put(iv.getID(),iv);
+			if(xmlStore)
+				iv.storeInXml(XMLfab.withRoot(settingsPath,"dcafs","settings","rtvals"));
+			return iv;
 		}
 		return val;
+	}
+	public IntegerVal addIntegerVal( String group, String name ){
+		return addIntegerVal( IntegerVal.newVal(group,name),true);
 	}
 	public boolean renameInteger( String from, String to, boolean alterXml){
 		if( hasInteger(to) ){
@@ -768,7 +643,7 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 		}
 		var iv = getIntegerVal(from);
 		if( iv.isPresent() ){
-			// Alter the DoubleVal
+			// Alter the RealVal
 			integerVals.remove(from); // Remove it from the list
 			var name = to;
 			if( name.contains("_") )
@@ -801,38 +676,15 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 	}
 	/**
 	 * Sets the value of a parameter (in a hashmap)
-	 * @param id The parameter name
-	 * @param value The value of the parameter
-	 * @param createIfNew Whether to create a new object if none was found
-	 * @return True if it was created
+	 * @param id The integerval id
+	 * @param value the new value
+	 * @return True if it was updated
 	 */
-	private boolean setInteger(String id, int value, boolean createIfNew) {
-
-		if( id.isEmpty()) {
-			Logger.error("Empty id given");
-			return false;
-		}
-		IntegerVal d;
-		if( createIfNew ) {
-			d = getOrAddIntegerVal(id);
-		}else{
-			d = integerVals.get(id);
-		}
-
-		if( d==null ) {
-			Logger.error("No such double "+id+" yet, create it first");
-			return false;
-		}
-		d.updateValue(value);
-		return true;
-	}
-	public boolean setInteger(String id, int value){
-		return setInteger(id,value,true);
-	}
 	public boolean updateInteger(String id, int value) {
-		if( id.isEmpty())
+		if( !integerVals.containsKey(id))
 			return false;
-		return !setInteger(id,value,false);
+		integerVals.get(id).value(value);
+		return true;
 	}
 
 	/**
@@ -850,22 +702,13 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 	 * Get the value of an integer
 	 *
 	 * @param id The id to get the value of
-	 * @param bad The value to return of the id wasn't found
 	 * @return The value found or the bad value
 	 */
-	public int getInteger(String id, int bad) {
-		return getInteger(id,bad,false);
-	}
-	public int getInteger(String id, int defVal, boolean createIfNew) {
+	public int getInteger(String id, int defVal) {
 
-		IntegerVal i = integerVals.get(id.toLowerCase());
+		IntegerVal i = integerVals.get(id);
 		if (i == null) {
-			if( createIfNew ){
-				Logger.warn("ID "+id+" doesn't exist, creating it with value "+defVal);
-				setDouble(id,defVal,true);
-			}else{
-				Logger.debug("No such id: " + id);
-			}
+			Logger.debug("No such id: " + id);
 			return defVal;
 		}
 		return i.intValue();
@@ -875,7 +718,6 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 		return texts.containsKey(id);
 	}
 	public boolean setText(String parameter, String value) {
-
 
 		if( parameter.isEmpty()) {
 			Logger.error("Empty param given");
@@ -967,9 +809,9 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 	public boolean raiseFlag( String... flags ){
 		int cnt = flagVals.size();
 		for( var f : flags) {
-			setFlagState(f,true);
+			getOrAddFlagVal(f).setState(true);
 		}
-		return cnt!= flagVals.size();
+		return cnt != flagVals.size();
 	}
 	/**
 	 * Lowers a flag or clears a bool.
@@ -979,7 +821,7 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 	public boolean lowerFlag( String... flag ){
 		int cnt = flagVals.size();
 		for( var f : flag){
-			setFlagState(f,false);
+			getOrAddFlagVal(f).setState(false);
 		}
 		return cnt!= flagVals.size();
 	}
@@ -993,18 +835,6 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 
 		int size = flagVals.size();
 		getOrAddFlagVal(id).setState(state);
-		XMLfab fab = XMLfab.withRoot(settingsPath,"dcafs","settings","rtvals");
-		String[] ids = id.split("_");
-		if( ids.length>1) {
-			var opt = fab.hasChild("group", "id", ids[0]);
-			if( opt.isEmpty())
-				return false;
-			fab = opt.get();
-
-		}
-		fab.alterChild("flag", "name", ids[1]).content(""+state);
-		fab.build();
-
 		return size==flagVals.size();
 	}
 	public ArrayList<String> listFlags(){
@@ -1020,15 +850,15 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 		XMLfab fab = XMLfab.withRoot(settingsPath,"dcafs","settings","rtvals");
 		if( clearFirst ) // If it needs to cleared first, remove child nodes
 			fab.clearChildren();
-		var vals = doubleVals.entrySet().stream().sorted(Map.Entry.comparingByKey()).map(Entry::getValue).collect(Collectors.toList());
-		for( var dv : vals ){
-			dv.storeInXml(fab);
+		var vals = realVals.entrySet().stream().sorted(Entry.comparingByKey()).map(Entry::getValue).toList();
+		for( var rv : vals ){
+			rv.storeInXml(fab);
 		}
-		var keys = texts.entrySet().stream().sorted(Map.Entry.comparingByKey()).map(Entry::getKey).collect(Collectors.toList());
+		var keys = texts.entrySet().stream().sorted(Entry.comparingByKey()).map(Entry::getKey).toList();
 		for( var dt : keys ){
 			fab.selectOrAddChildAsParent("text","id",dt).up();
 		}
-		var flags = flagVals.entrySet().stream().sorted(Map.Entry.comparingByKey()).map(Entry::getValue).collect(Collectors.toList());
+		var flags = flagVals.entrySet().stream().sorted(Entry.comparingByKey()).map(Entry::getValue).toList();
 		for( var fv : flags ){
 			fv.storeInXml(fab);
 		}
@@ -1036,81 +866,71 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 		return true;
 	}
 	/* ******************************************************************************************************/
-	/**
-	 * Get the current timestamp in db approved format, this should be overridden if
-	 * a gps is present
-	 * 
-	 * @return The timestamp in a sql valid format yyyy-MM-dd HH:mm:ss.SSS
-	 */
-	public synchronized String getTimeStamp() {
-		return LocalDateTime.now(ZoneOffset.UTC).format(TimeTools.LONGDATE_FORMATTER_UTC);
-	}
-
-	/* ******************************************************************************************************/
 
 	public int addRequest(Writable writable, String type, String req) {
 
 		switch (type) {
-			case "rtval": case "double": case "real":
-				var list = doubleVals.entrySet().stream()
-							.filter(e -> e.getKey().matches(req)) // matches the req
-							.map( e->e.getValue()) // Only care about the values
-							.collect(Collectors.toList());
-				list.forEach( dv -> dv.addTarget(writable));
-				return list.size();
-			case "text":
+			case "rtval", "double", "real" -> {
+				var rv = realVals.get(req);
+				if (rv == null)
+					return 0;
+				rv.addTarget(writable);
+				return 1;
+			}
+			case "int", "integer" -> {
+				var iv = integerVals.get(req);
+				if (iv == null)
+					return 0;
+				iv.addTarget(writable);
+				return 1;
+			}
+			case "text" -> {
 				var t = textRequest.get(req);
-				if( t == null) {
+				if (t == null) {
 					textRequest.put(req, new ArrayList<>());
 					Logger.info("Created new request for: " + req);
-				}else{
+				} else {
 					Logger.info("Appended existing request to: " + t + "," + req);
 				}
-				if( !textRequest.get(req).contains(writable)) {
+				if (!textRequest.get(req).contains(writable)) {
 					textRequest.get(req).add(writable);
 					return 1;
 				}
-				break;
-			default:
-				Logger.warn("Requested unknown type: "+type);
-				break;
+			}
+			default -> Logger.warn("Requested unknown type: " + type);
 		}
 		return 0;
 	}
-	/* **************************** MATH COLLECTOR ********************************************** */
-	public void addMathCollector( MathCollector mc ){
-		mc.addListener(this);
-		mathCollectors.put( mc.getID(),mc);
-	}
-	@Override
-	public void collectorFinished(String id, String message, Object result) {
-		String[] ids = id.split(":");
-		if(ids[0].equalsIgnoreCase("math")){
-			setDouble(message,(double)result,false);
-		}
+	public void removeRequests( Writable wr ){
+		realVals.values().forEach( rv -> rv.removeTarget(wr));
+		integerVals.values().forEach( iv -> iv.removeTarget(wr));
+		textRequest.forEach( (k,v) -> v.remove(wr));
 	}
 	/* ************************** C O M M A N D A B L E ***************************************** */
 	@Override
 	public String replyToCommand(String[] request, Writable wr, boolean html) {
 
 		switch( request[0] ){
-			case "doubles": case "dv":
-				return replyToDoublesCmd(request,html);
+			case "doubles": case "dv": case "rv": case "reals":
+				return replyToRealsCmd(request,html);
 			case "texts": case "tv":
 				return replyToTextsCmd(request,html);
 			case "flags": case "fv":
 				return replyToFlagsCmd(request,html);
-			case "rtval": case "double": case "real":
+			case "rtval": case "double": case "real": case "int": case "integer":
 				int s = addRequest(wr,request[0],request[1]);
-				return s!=0?"Request added to "+s+" doublevals":"Request failed";
+				return s!=0?"Request added to "+s+" realvals":"Request failed";
 			case "rtvals": case "rvs":
-				return replyToRtvalsCmd(request,wr,html);
+				return replyToRtvalsCmd(request,html);
+			case "":
+				removeRequests(wr);
+				return "";
 			default:
 				return "unknown command "+request[0]+":"+request[1];
 		}
 	}
 	public boolean removeWritable(Writable writable ) {
-		doubleVals.values().forEach( dv -> dv.removeTarget(writable));
+		realVals.values().forEach(rv -> rv.removeTarget(writable));
 		textRequest.forEach( (key, list) -> list.remove(writable));
 		return true;
 	}
@@ -1145,7 +965,7 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 						.add( green+"  tv:reqs"+reg+" -> Get a listing of the requests active");
 				return join.toString();
 			case "list":
-				return String.join(html?"<br>":"\r\n",getRtvalsList(html,false,false,true));
+				return String.join(html?"<br>":"\r\n",getRtvalsList(html,false,false,true, true));
 			case "reqs":
 				textRequest.forEach((rq, list) -> join.add(rq +" -> "+list.size()+" requesters"));
 				return join.toString();
@@ -1177,7 +997,7 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 		var cmds = request[1].split(",");
 		var join = new StringJoiner(html?"<br>":"\r\n");
 		join.setEmptyValue("None yet");
-		var fab = XMLfab.withRoot(settingsPath,"dcafs","settings","rtvals");
+
 		switch( cmds[0] ){
 			case "?":
 				join.add(ora+"Note: both fv and flags are valid starters"+reg)
@@ -1190,11 +1010,11 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 						.add( green+"  fv:list"+reg+" -> Give a listing of all current flags and their state");
 				return join.toString();
 			case "list":
-				return getRtvalsList(html,false,true,false);
+				return getRtvalsList(html,false,true,false,false);
 			case "new":
 				if( cmds.length <2)
 					return "Not enough arguments, need flags:new,id<,state> or fv:new,id<,state>";
-				setFlagState(cmds[1],Tools.parseBool( cmds.length==3?cmds[2]:"false",false));
+				getOrAddFlagVal(cmds[1]).setState(Tools.parseBool( cmds.length==3?cmds[2]:"false",false));
 				return "Flag created/updated "+cmds[1];
 			case "raise": case "set":
 				if( cmds.length !=2)
@@ -1222,7 +1042,7 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 					return "Not enough arguments, fv:addcmd,id,when:cmd";
 				var fv = flagVals.get(cmds[1]);
 				if( fv==null)
-					return "No such double: "+cmds[1];
+					return "No such real: "+cmds[1];
 				String cmd = request[1].substring(request[1].indexOf(":")+1);
 				String when = cmds[2].substring(0,cmds[2].indexOf(":"));
 				if( !fv.hasTriggeredCmds())
@@ -1235,7 +1055,7 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 		}
 		return "unknown command "+request[0]+":"+request[1];
 	}
-	public String replyToDoublesCmd(String[] request, boolean html ){
+	public String replyToRealsCmd(String[] request, boolean html ){
 		if( request[1].isEmpty())
 			request[1]="list";
 
@@ -1246,145 +1066,130 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 		String reg=html?"":TelnetCodes.TEXT_YELLOW+TelnetCodes.UNDERLINE_OFF;
 
 		double result;
-		var fab = XMLfab.withRoot(settingsPath,"dcafs","settings","rtvals");
+		RealVal rv;
+		String p0 = request[0];
 		var join = new StringJoiner(html?"<br>":"\r\n");
 		switch( cmds[0] ){
 			case "?":
-				join.add(ora+"Note: both dv and doubles are valid starters"+reg)
+				join.add(ora+"Note: both rv and reals are valid starters"+reg)
 						.add( cyan+" Create or alter"+reg)
-						.add( green+"  dv:new,id,value"+reg+" -> Create a new double (or update) with the given id/value")
-						.add( green+"  dv:update,id,value"+reg+" -> Update an existing double, do nothing if not found")
-						.add( green+"  dv:addcmd,id,when:cmd"+reg+" -> Add a cmd with the given trigger to id")
-						.add( green+"  dv:alter,id,param:value"+reg+" -> Alter some of the params of id, currently scale and unit are possible")
-						.add( green+"  dv:updategroup,groupid,value"+reg+" -> Update all DoubleVals that belong to the groupid with the given value")
+						.add( green+"  "+p0+":new,group,name"+reg+" -> Create a new real with the given group & name")
+						.add( green+"  "+p0+":update,id,value"+reg+" -> Update an existing real, do nothing if not found")
+						.add( green+"  "+p0+":addcmd,id,when:cmd"+reg+" -> Add a cmd with the given trigger to id")
+						.add( green+"  "+p0+":alter,id,param:value"+reg+" -> Alter some of the params of id, currently scale and unit are possible")
+						.add( green+"  "+p0+":updategroup,groupid,value"+reg+" -> Update all RealVals that belong to the groupid with the given value")
 						.add("").add( cyan+" Get info"+reg)
-				  	    .add( green+"  dv:?"+reg+" -> Show this message" )
-						.add( green+"  dv:list"+reg+" -> Get a listing of currently stored texts")
-						.add( green+"  dv:reqs"+reg+" -> Get a listing of all the requests currently active");
+				  	    .add( green+"  "+p0+":?"+reg+" -> Show this message" )
+						.add( green+"  "+p0+":list"+reg+" -> Get a listing of currently stored texts")
+						.add( green+"  "+p0+":reqs"+reg+" -> Get a listing of all the requests currently active");
 				return join.toString();
-			case "list": return getRtvalsList(html,true,false,false);
+			case "list": return getRtvalsList(html,true,false,false, false);
 			case "new": case "create":
-				result=0;
-				if( cmds.length==3 ) {
-					result = processExpression(cmds[2], true);
-					if (Double.isNaN(result))
-						return "Failed to process expression";
+				if( cmds.length!=3 )
+					return "Not enough arguments given, "+request[0]+":new,id(,value)";
+
+				rv = RealVal.newVal(cmds[1], cmds[2]);
+				if( addRealVal(rv,true) ) {
+					return "New realVal added " + rv.getID() + ", stored in xml";
 				}
-				getOrAddDoubleVal(cmds[1]).updateValue(result);
-				return "DoubleVal set to "+result;
+				return "Real already exists";
 			case "alter":
 				if( cmds.length<3)
-					return "Not enough arguments: doubles:alter,id,param:value";
+					return "Not enough arguments: "+request[0]+":alter,id,param:value";
 				var vals = cmds[2].split(":");
 				if( vals.length==1)
 					return "Incorrect param:value pair: "+cmds[2];
-				return getDoubleVal(cmds[1]).map( dv -> {
-					if( vals[0].equals("scale")) {
-						dv.fractionDigits(NumberUtils.toInt(vals[1]));
-						fab.alterChild("real","id",cmds[1]).attr("scale",dv.scale()).build();
-						return "Scaling for " +cmds[1]+" set to " + dv.scale() + " digits";
-					}else if( vals[0].equals("unit")) {
-						fab.alterChild("real","id",cmds[1]).attr("unit",vals[1]).build();
-						return "Unit for "+cmds[1]+" set to "+vals[1];
-					}else{
-						return "Unknown param: "+vals[0];
+				var rvOpt = getRealVal(cmds[1]);
+				if( rvOpt.isEmpty())
+					return "No such real yet.";
+				var realVal = rvOpt.get();
+				var digger = XMLdigger.digRoot(settingsPath,"dcafs")
+						.goDown("settings","rtvals")
+						.goDown("group","name",realVal.group())
+						.goDown("real","name",realVal.name());
+				if( digger.isValid() ){
+					switch( vals[0]){
+						case "scale":
+							realVal.scale(NumberUtils.toInt(vals[1]));
+							break;
+						case "unit":
+							realVal.unit(vals[1]);
+							break;
+						default:
+							return "unknown parameter: "+vals[0];
 					}
-				}).orElse("No such DoubleVal");
+					digger.alterAttrAndBuild(vals[0],vals[1]);
+					return "Altered "+vals[0]+ " to "+ vals[1];
+				}else{
+					return "No valid nodes found";
+				}
 			case "update":
-				if( !hasDouble(cmds[1]) )
+				if( !hasReal(cmds[1]) )
 					return "No such id "+cmds[1];
-				result = processExpression(cmds[2],false);
+				result = processExpression(cmds[2]);
 				if( Double.isNaN(result) )
 					return "Unknown id(s) in the expression "+cmds[2];
-				updateDouble(cmds[1],result);
+				updateReal(cmds[1],result);
 				return cmds[1]+" updated to "+result;
 			case "updategroup":
-				int up = updateDoubleGroup(cmds[1], NumberUtils.createDouble(cmds[2]));
+				int up = updateRealGroup(cmds[1], NumberUtils.createDouble(cmds[2]));
 				if( up == 0)
-					return "No double's updated";
-				return "Updated "+up+" doubles";
+					return "No real's updated";
+				return "Updated "+up+" reals";
 			case "addcmd":
 				if( cmds.length < 3)
-					return "Not enough arguments, dv:addcmd,id,when:cmd";
-				var dv = doubleVals.get(cmds[1]);
-				if( dv==null)
-					return "No such double: "+cmds[1];
+					return "Not enough arguments, rv:addcmd,id,when:cmd";
+				rv = realVals.get(cmds[1]);
+				if( rv==null)
+					return "No such real: "+cmds[1];
 				String cmd = request[1].substring(request[1].indexOf(":")+1);
 				String when = cmds[2].substring(0,cmds[2].indexOf(":"));
-				if( !dv.hasTriggeredCmds())
-					dv.enableTriggeredCmds(dQueue);
-				dv.addTriggeredCmd(when,cmd);
+				if( !rv.hasTriggeredCmds())
+					rv.enableTriggeredCmds(dQueue);
+				rv.addTriggeredCmd(when,cmd);
 				XMLfab.withRoot(settingsPath,"dcafs","settings","rtvals")
 						.selectChildAsParent("real","id",cmds[1])
 						.ifPresent( f -> f.addChild("cmd",cmd).attr("when",when).build());
 				return "Cmd added";
 			case "reqs":
 				join.setEmptyValue("None yet");
-				doubleVals.forEach((id, d) -> join.add(id +" -> "+d.getTargets()));
+				realVals.forEach((id, d) -> join.add(id +" -> "+d.getTargets()));
 				return join.toString();
 			default:
 				return "unknown command: "+request[0]+":"+request[1];
 		}
 	}
-	private double processExpression( String exp, boolean create ){
+	private double processExpression( String expr ){
 		double result=Double.NaN;
 
-		if( create ) {
-			exp = exp.replace("d:","D:");
-			exp = exp.replace("double:","D:");
-			exp = exp.replace("f:","F:");
-			exp = exp.replace("flag:","F:");
-		}
+		expr = parseRTline(expr,"");
+		expr = expr.replace("true","1");
+		expr = expr.replace("false","0");
 
-		exp = parseRTline(exp,"");
-		exp=exp.replace("true","1");
-		exp=exp.replace("false","0");
+		expr = simpleParseRT(expr,""); // Replace all references with actual numbers if possible
 
-		exp = simpleParseRT(exp,create?"create":"");
-		if( exp.isEmpty())
+		if( expr.isEmpty()) // If any part of the conversion failed
 			return result;
 
-		var parts = MathUtils.extractParts(exp);
+		var parts = MathUtils.extractParts(expr);
 		if( parts.size()==1 ){
-			if( !NumberUtils.isCreatable(exp)) {
-				if( hasDouble(exp) || create ) {
-					result = getDouble(exp, 0, create);
-				}else{
-					return Double.NaN;
-				}
-			}else{
-				result = NumberUtils.createDouble(exp);
-			}
+			result = NumberUtils.createDouble(expr);
 		}else if (parts.size()==3){
-			if( !NumberUtils.isCreatable(parts.get(0))) {
-				if( hasDouble(parts.get(0)) || create ) {
-					parts.set(0, "" + getDouble(parts.get(0), 0, create));
-				}else{
-					return Double.NaN;
-				}
-			}
-			if( !NumberUtils.isCreatable(parts.get(2))) {
-				if( hasDouble(parts.get(2)) || create ) {
-					parts.set(2, "" + getDouble(parts.get(2), 0, create));
-				}else{
-					return Double.NaN;
-				}
-			}
 			result = Objects.requireNonNull(MathUtils.decodeDoublesOp(parts.get(0), parts.get(2), parts.get(1), 0)).apply(new Double[]{});
 		}else{
 			try {
-				result = MathUtils.simpleCalculation(exp, Double.NaN, false);
+				result = MathUtils.simpleCalculation(expr, Double.NaN, false);
 			}catch(IndexOutOfBoundsException e){
-				Logger.error("Index out of bounds while processing "+exp);
+				Logger.error("Index out of bounds while processing "+expr);
 				return Double.NaN;
 			}
 		}
 		return result;
 	}
-	public String replyToRtvalsCmd( String[] request, Writable wr, boolean html ){
+	public String replyToRtvalsCmd( String[] request, boolean html ){
 
 		if( request[1].isEmpty())
-			return getRtvalsList(html,true,true,true);
+			return getRtvalsList(html,true,true,true, true);
 
 		String[] cmds = request[1].split(",");
 
@@ -1407,7 +1212,7 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 							.add(green+"  rtvals:groups"+reg+" -> Get a listing of all the available groups")
 							.add(green+"  rtvals:group,groupid"+reg+" -> Get a listing of all rtvals belonging to the group")
 							.add(green+"  rtvals:name,valname"+reg+" -> Get a listing of all rtvals with the given valname (independent of group)")
-							.add(green+"  rtvals:resetgroup,groupid"+reg+" -> Reset the integers and real/double rtvals in the given group");
+							.add(green+"  rtvals:resetgroup,groupid"+reg+" -> Reset the integers and real rtvals in the given group");
 					return join.toString();
 				case "store": return  storeValsInXml(false)?"Written in xml":"Failed to write to xml";
 				case "reload":
@@ -1416,14 +1221,14 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 			}
 		}else if(cmds.length==2){
 			switch(cmds[0]){
-				case "group":  return getRTValsGroupList(cmds[1],true,true,true,html);
+				case "group":  return getRTValsGroupList(cmds[1],true,true,true,true,html);
 				case "groups":
 					String groups = String.join(html?"<br>":"\r\n",getGroups());
 					return groups.isEmpty()?"No groups yet":groups;
 				case "name"	:  return getAllIDsList(cmds[1],html);
 				case "resetgroup":
 					int a = updateIntegerGroup(cmds[1],-999);
-					a += updateDoubleGroup(cmds[1],Double.NaN);
+					a += updateRealGroup(cmds[1],Double.NaN);
 					return "Reset "+a+" vals.";
 			}
 		}
@@ -1435,24 +1240,35 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 	 * @param html Use html formatting or telnet
 	 * @return The listing
 	 */
-	public String getRTValsGroupList(String group, boolean showDoubles, boolean showFlags, boolean showTexts, boolean html) {
+	public String getRTValsGroupList(String group, boolean showReals, boolean showFlags, boolean showTexts, boolean showInts, boolean html) {
 		String eol = html ? "<br>" : "\r\n";
 		String title = html ? "<b>Group: " + group + "</b>" : TelnetCodes.TEXT_CYAN + "Group: " + group + TelnetCodes.TEXT_YELLOW;
-		String space = html ? "  " : "  ";
+		String space = "  ";//html ? "  " : "  ";
 
 		StringJoiner join = new StringJoiner(eol, title + eol, "");
 		join.setEmptyValue("None yet");
-		if (showDoubles){
-			doubleVals.values().stream().filter(dv -> dv.group().equalsIgnoreCase(group))
-					.sorted((dv1, dv2) -> {
-						if (dv1.order() != dv2.order()) {
-							return Integer.compare(dv1.order(), dv2.order());
+		ArrayList<NumericVal> nums = new ArrayList<>();
+		if (showReals){
+			nums.addAll(realVals.values().stream().filter(rv -> rv.group().equalsIgnoreCase(group)).toList());
+		}
+		if( showInts ){
+			nums.addAll(integerVals.values().stream().filter(rv -> rv.group().equalsIgnoreCase(group)).toList());
+		}
+		if( !nums.isEmpty()){
+			nums.stream()
+					.sorted((nv1, nv2) -> {
+						if (nv1.order() != nv2.order()) {
+							return Integer.compare(nv1.order(), nv2.order());
 						} else {
-							return dv1.name().compareTo(dv2.name());
+							return nv1.name().compareTo(nv2.name());
 						}
 					})
-					.map(dv -> space + dv.name() + " : " + dv) //Change it to strings
-					.forEach(join::add); // Then add the sorted strings
+					.map(nv -> {
+						if( nv instanceof RealVal)
+							return space + nv.name() + " : "+ nv.value()+ nv.unit();
+						return space + nv.name() + " : "+ nv.intValue() + nv.unit();
+					} ) // change it to strings
+					.forEach(join::add);
 		}
 		if( showTexts ) {
 			texts.entrySet().stream().filter(ent -> ent.getKey().startsWith(group + "_"))
@@ -1475,19 +1291,21 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 	public String getAllIDsList(String name, boolean html) {
 		String eol = html?"<br>":"\r\n";
 		String title = html?"<b>Name: "+name+"</b>":TelnetCodes.TEXT_CYAN+"Name: "+name+TelnetCodes.TEXT_YELLOW;
-		String space = html?"  ":"  ";
+		String space = "  ";//html?"  ":"  ";
 
 		StringJoiner join = new StringJoiner(eol,title+eol,"");
 		join.setEmptyValue("No matches found");
 
 		String regex;
-		if( name.contains("*")&& name.contains(".*")) {
+		if( name.contains("*") && !name.contains(".*")) {
 			regex = name.replace("*", ".*");
 		}else{
 			regex=name;
 		}
-		doubleVals.values().stream().filter( dv -> dv.name().matches(regex))
-				.forEach(dv -> join.add(space+(dv.group().isEmpty()?"":dv.group()+" -> ")+dv.name()+" : "+dv));
+		realVals.values().stream().filter(rv -> rv.name().matches(regex))
+				.forEach(rv -> join.add(space+(rv.group().isEmpty()?"":rv.group()+" -> ")+rv.name()+" : "+rv));
+		integerVals.values().stream().filter( iv -> iv.name().matches(regex))
+				.forEach(iv -> join.add(space+(iv.group().isEmpty()?"":iv.group()+" -> ")+iv.name()+" : "+iv));
 		texts.entrySet().stream().filter(ent -> ent.getKey().matches(regex))
 				.forEach( ent -> join.add( space+ent.getKey().replace("_","->")+" : "+ent.getValue()) );
 		flagVals.values().stream().filter(fv -> fv.name().matches(regex))
@@ -1496,52 +1314,65 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 	}
 
 	/**
-	 * Get the full listing of all doubles,flags and text, so both grouped and ungrouped
+	 * Get the full listing of all reals,flags and text, so both grouped and ungrouped
 	 * @param html If true will use html newline etc
 	 * @return The listing
 	 */
-	public String getRtvalsList(boolean html, boolean showDoubles, boolean showFlags, boolean showTexts){
+	public String getRtvalsList(boolean html, boolean showReals, boolean showFlags, boolean showTexts, boolean showInts){
 		String eol = html?"<br>":"\r\n";
-		//String title = html?"<b>Grouped</b>":TelnetCodes.TEXT_CYAN+"Grouped"+TelnetCodes.TEXT_YELLOW;
-		String space = html?"  ":"  ";
-		StringJoiner join = new StringJoiner(eol);
+		String space = "  ";//html?"  ":"  ";
+		StringJoiner join = new StringJoiner(eol,"Status at "+ TimeTools.formatShortUTCNow()+eol+eol,"");
 		join.setEmptyValue("None yet");
 
 		// Find & add the groups
 		for( var group : getGroups() ){
-			var res = getRTValsGroupList(group,showDoubles,showFlags,showTexts,html);
+			var res = getRTValsGroupList(group,showReals,showFlags,showTexts,showInts,html);
 			if( !res.isEmpty() && !res.equalsIgnoreCase("none yet"))
 				join.add(res).add("");
 		}
 
 		// Add the not grouped ones
-		boolean ngDoubles = doubleVals.values().stream().anyMatch( dv -> dv.group().isEmpty())&&showDoubles;
-		boolean ngTexts = texts.keySet().stream().anyMatch(k -> k.contains("_"))&&showTexts;
+		boolean ngReals = realVals.values().stream().anyMatch(rv -> rv.group().isEmpty())&&showReals;
+		boolean ngTexts = !texts.isEmpty() && texts.keySet().stream().noneMatch(k -> k.contains("_")) && showTexts;
 		boolean ngFlags = flagVals.values().stream().anyMatch( fv -> fv.group().isEmpty())&&showFlags;
+		boolean ngIntegers = integerVals.values().stream().anyMatch( iv -> iv.group().isEmpty())&&showInts;
 
-		if( ngDoubles || ngTexts || ngFlags) {
+		if( ngReals || ngTexts || ngFlags || ngIntegers ) {
 			join.add("");
-			join.add(html ? "<b>Ungrouped</b>" : TelnetCodes.TEXT_CYAN + "Ungrouped" + TelnetCodes.TEXT_YELLOW);
+			join.add(html ? "<b>Default group</b>" : TelnetCodes.TEXT_ORANGE + "Default group" + TelnetCodes.TEXT_YELLOW);
 
-			if (ngDoubles) {
-				join.add(html ? "<b>Doubles</b>" : TelnetCodes.TEXT_BLUE + "Doubles" + TelnetCodes.TEXT_YELLOW);
-				doubleVals.values().stream().filter(dv -> dv.group().isEmpty())
-						.map(dv->space + dv.name() + " : " + dv).sorted().forEach(join::add);
+			if (ngReals) {
+				join.add(html ? "<b>Reals</b>" : TelnetCodes.TEXT_MAGENTA + "Reals" + TelnetCodes.TEXT_YELLOW);
+				realVals.values().stream().filter(rv -> rv.group().isEmpty())
+						.map(rv->space + rv.name() + " : " + rv).sorted().forEach(join::add);
+			}
+			if (ngIntegers){
+				join.add(html ? "<b>Integers</b>" : TelnetCodes.TEXT_MAGENTA + "Integers" + TelnetCodes.TEXT_YELLOW);
+				integerVals.values().stream().filter(iv -> iv.group().isEmpty())
+						.map(iv->space + iv.name() + " : " + iv).sorted().forEach(join::add);
 			}
 			if (ngTexts) {
 				join.add("");
-				join.add(html ? "<b>Texts</b>" : TelnetCodes.TEXT_BLUE + "Texts" + TelnetCodes.TEXT_YELLOW);
+				join.add(html ? "<b>Texts</b>" : TelnetCodes.TEXT_MAGENTA + "Texts" + TelnetCodes.TEXT_YELLOW);
 				texts.entrySet().stream().filter(e -> !e.getKey().contains("_"))
 						.map( e -> space + e.getKey() + " : " + e.getValue()).sorted().forEach(join::add);
 			}
 			if (ngFlags) {
 				join.add("");
-				join.add(html ? "<b>Flags</b>" : TelnetCodes.TEXT_BLUE + "Flags" + TelnetCodes.TEXT_YELLOW);
+				join.add(html ? "<b>Flags</b>" : TelnetCodes.TEXT_MAGENTA + "Flags" + TelnetCodes.TEXT_YELLOW);
 				flagVals.values().stream().filter(fv -> fv.group().isEmpty())
 						.map(fv->space + fv.name() + " : " + fv).sorted().forEach(join::add);
 			}
 		}
-		return join.toString();
+		String result = join.toString();
+		if( !html)
+			return result;
+
+		// Try to fix some symbols to correct html counterpart
+		result = result.replace("°C","&#8451"); // fix the °C
+		result = result.replace("m²","&#13217;"); // Fix m²
+		result = result.replace("m³","&#13221;"); // Fix m³
+		return result;
 	}
 
 	/**
@@ -1549,9 +1380,15 @@ public class RealtimeValues implements CollectorFuture, DataProviding, Commandab
 	 * @return The list of the groups
 	 */
 	public List<String> getGroups(){
-		var groups = doubleVals.values().stream()
-				.map(DoubleVal::group)
-				.filter(group -> !group.isEmpty()).distinct().collect(Collectors.toList());
+		var groups = realVals.values().stream()
+				.map(RealVal::group)
+				.filter(group -> !group.isEmpty()).distinct()
+				.collect(Collectors.toList());
+		integerVals.values().stream()
+				.map(IntegerVal::group)
+				.filter(group -> !group.isEmpty() && !groups.contains(group))
+				.distinct()
+				.forEach(groups::add);
 		texts.keySet().stream()
 						.filter( k -> k.contains("_"))
 						.map( k -> k.split("_")[0] )
